# doc-mcp

./: .gitignore  ARCHITECTURE.md  DECISIONS.md  DECISION_CHECKLIST.md  PROJECT_SPEC.md  README.md  TESTING.md  pyproject.toml  requirements.txt
.github/: README.md
.github/workflows/: publish-pypi.yml  publish-testpypi.yml
app/: __init__.py  main.py
app/components/: folder_selector.py  kb_generator.py  mcp_controls.py  search_tester.py
app/utils/: kb_manager.py  mcp_config.py  repomix_runner.py
docs_mcp/: README.md  __init__.py  __main__.py  cli.py  requirements.txt
docs_mcp/web/: __init__.py  app.py
docs_mcp/web/templates/: index.html
