[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docs-mcp"
version = "0.1.0"
description = "Convert code folders into Claude Desktop knowledge bases via MCP server"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "docs-mcp Contributors"}
]
keywords = [
    "mcp",
    "claude",
    "knowledge-base",
    "documentation",
    "ai",
    "llm",
    "flask",
    "web-ui",
    "code-analysis"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Environment :: Web Environment",
]
requires-python = ">=3.8"
dependencies = [
    "md-mcp>=0.1.0",
    "click>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/ly2xxx/docs-mcp"
Issues = "https://github.com/ly2xxx/docs-mcp/issues"
Repository = "https://github.com/ly2xxx/docs-mcp"

[project.scripts]
docs-mcp = "docs_mcp.cli:main"

[project.optional-dependencies]
web = [
    "Flask>=3.0.0",
]
dev = [
    "build>=0.10.0",
    "twine>=4.0.0",
    "pytest>=7.0.0",
]
all = [
    "docs-mcp[web,dev]",
]

[tool.setuptools]
packages = ["docs_mcp", "docs_mcp.web"]

[tool.setuptools.package-data]
docs_mcp = []
"docs_mcp.web" = ["templates/*.html", "static/css/*.css", "static/js/*.js"]
